fix overflow/border radius issues

--- a/css/style.css
+++ b/css/style.css
@@ -291,17 +291,14 @@ body {
 }
 #box {
 	border: 4px solid #99cc00;
-	border-radius: 30px;
 	margin-top: 4%;
 	overflow: scroll;
 	position: relative;
 }
 .check-in-frame {
 	border: 4px solid #ace600;
-    border-radius: 30px;
     position: relative;
-    overflow-x: hidden;
-	overflow-y: scroll;
+	overflow: scroll;
     display: inline-block;
     margin-right: 7%;
     margin-top: 4%;
@@ -309,10 +306,8 @@ body {
 }
 .check-out-frame {
 	border: 4px solid #99cc00;
-    border-radius: 30px;
     position: relative;
-    overflow-x: hidden;
-	overflow-y: scroll;
+	overflow: scroll;
     display: inline-block;
     margin-left: 7%;
 	-webkit-overflow-scrolling: touch;
@@ -483,9 +478,7 @@ body {
 .calendar {
 	margin-top: 4%;
 	border: 4px solid #99cc00;
-	border-radius: 30px;
-	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow: scroll;
 	-webkit-overflow-scrolling: touch;
 }
 
@@ -518,6 +511,7 @@ body {
 	#box {
 		width: 78%;
 		height: 375px;
+		border-radius: 20px;
 	}
 	.check-in-frame {
 		width: 78%;
@@ -525,6 +519,7 @@ body {
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
+		border-radius: 20px;
 	}
 	.check-out-frame {
 		width: 78%;
@@ -533,6 +528,7 @@ body {
 		margin-top: 2em;
 		margin-left: auto;
 		margin-right: auto;
+		border-radius: 20px;
 	}
 	.copyright {
 		font-size: 11px;
@@ -663,6 +659,9 @@ body {
 		height: auto;
 		padding: 2%;
 	}
+	.calendar {
+		border-radius: 20px;
+	}
 }
 
 @media (min-width: 480px) {
@@ -694,6 +693,7 @@ body {
 	#box {
 		width: 76%;
 		height: 400px;
+		border-radius: 20px;
 	}
 	.check-in-frame {
 		width: 60%;
@@ -701,6 +701,7 @@ body {
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
+		border-radius: 20px;
 	}
 	.check-out-frame {
 		width: 60%;
@@ -709,6 +710,7 @@ body {
 		margin-top: 2em;
 		margin-right: auto;
 		margin-left: auto;
+		border-radius: 20px;
 	}
 	.copyright {
 		font-size: 11.5px;
@@ -834,6 +836,9 @@ body {
 		height: auto;
 		padding: 2%;
 	}
+	.calendar {
+		border-radius: 20px;
+	}
 }
 
 
@@ -866,6 +871,7 @@ body {
 	#box {
 		width: 74%;
 		height: 450px;
+		border-radius: 20px;
 	}
 	.check-in-frame {
 		width: 37%;
@@ -873,6 +879,7 @@ body {
 		display: inline-block;
 		margin-right: 4%;
 		margin-left: auto;
+		border-radius: 20px;
 	}
 	.check-out-frame {
 		width: 37%;
@@ -881,6 +888,7 @@ body {
 		margin-top: 0em;
 		margin-left: 4%;
 		margin-right: auto;
+		border-radius: 20px;
 	}
 	.copyright {
 		font-size: 12px;
@@ -1005,6 +1013,9 @@ body {
 	.advisor-paragraph-container {
 		height: 180px;
 	}
+	.calendar {
+		border-radius: 20px;
+	}
 }
 
 @media (min-width: 979px) {
@@ -1036,6 +1047,7 @@ body {
 	#box {
 		width: 72%;
 		height: 480px;
+		border-radius: 30px;
 	}
 	.check-in-frame {
 		width: 36%;
@@ -1043,6 +1055,7 @@ body {
 		display: inline-block;
 		margin-right: 4%;
 		margin-left: auto;
+		border-radius: 30px;
 	}
 	.check-out-frame {
 		width: 36%;
@@ -1051,6 +1064,7 @@ body {
 		margin-top: 0em;
 		margin-left: 4%;
 		margin-right: auto;
+		border-radius: 30px;
 	}
 	.copyright {
 		font-size: 14px;
@@ -1174,6 +1188,9 @@ body {
 	.advisor-paragraph-container {
 		height: 183px;
 	}
+	.calendar {
+		border-radius: 30px;
+	}
 }
 
 @media (min-width: 1200px) {
@@ -1205,6 +1222,7 @@ body {
 	#box {
 		width: 70%;
 		height: 500px;
+		border-radius: 30px;
 	}
 	.check-in-frame {
 		width: 32%;
@@ -1212,6 +1230,7 @@ body {
 		display: inline-block;
 		margin-right: 4%;
 		margin-left: auto;
+		border-radius: 30px;
 	}
 	.check-out-frame {
 		width: 32%;
@@ -1220,6 +1239,7 @@ body {
 		margin-top: 0em;
 		margin-left: 4%;
 		margin-right: auto;
+		border-radius: 30px;
 	}
 	.copyright {
 		font-size: 15px;
@@ -1342,6 +1362,9 @@ body {
 	}
 	.advisor-paragraph-container {
 		height: 170px;
+	}
+	.calendar {
+		border-radius: 30px;
 	}
 }
 
